[package]
name = "tss-lib-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
sha2 = "0.10"
prost = "0.11"
log = "0.4"

[dev-dependencies]
# Add any dependencies needed for testing here
